# openpack-visions

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
kinect_data_extraction/: README.md
kinect_data_extraction/calibration_data_extractor/: CMakeLists.txt  Makefile  README.md  k4a_calibration_data_extractor.cpp
samples/: .gitignore  Makefile
video_annonymization/: Makefile  README.md  annonymization.py  docker-compose.yaml  pyproject.toml  utils.py
video_annonymization/docker/: Dockerfile
video_annonymization/pose_estimation/: dataclass.py  keypoint_rcnn.py  wrapper.py
video_annonymization/pose_estimation/tests/: test_keypoint_rcnn.py
video_annonymization/segmentation/: dataclass.py  deeplab.py  wrapper.py
video_annonymization/segmentation/tests/: test_deeplab.py
video_annonymization/tests/: image_fixtures.py  test_annonymization.py  test_utils.py
